--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: rgb(100, 236, 236);
+  background-color: rgb(29, 27, 27);
 }
 
 .container {
@@ -33,71 +33,88 @@
 .item2 {
   grid-column: 1/3;
   grid-row: 2/3;
+  background-color: orangered;
 }
 .item3 {
   grid-column: 3/4;
   grid-row: 2/3;
+  background-color: orangered;
 }
 .item4 {
   grid-column: 4/5;
   grid-row: 2/3;
+  background-color: orangered;
 }
 
 .item5 {
   grid-column: 1/2;
   grid-row: 3/4;
+  background-color: white;
 }
 .item6 {
   grid-column: 2/3;
   grid-row: 3/4;
+  background-color: white;
 }
 .item7 {
   grid-column: 3/4;
   grid-row: 3/4;
+  background-color: white;
 }
 .item8 {
   grid-column: 4/5;
   grid-row: 3/4;
+  background-color: orangered;
 }
 .item9 {
   grid-column: 1/2;
   grid-row: 4/5;
+  background-color: white;
 }
 .item10 {
   grid-column: 2/3;
   grid-row: 4/5;
+  background-color: white;
 }
 .item11 {
   grid-column: 3/4;
   grid-row: 4/5;
+  background-color: white;
 }
 .item12 {
   grid-column: 4/5;
   grid-row: 4/5;
+  background-color: orangered;
 }
 .item13 {
   grid-column: 1/2;
   grid-row: 5/6;
+  background-color: white;
 }
 .item14 {
   grid-column: 2/3;
   grid-row: 5/6;
+  background-color: white;
 }
 .item15 {
   grid-column: 3/4;
   grid-row: 5/6;
+  background-color: white;
 }
 .item16 {
   grid-column: 4/5;
   grid-row: 5/6;
+  background-color: orangered;
 }
 .item17 {
   grid-column: 1/4;
   grid-row: 6/7;
+  background-color: white;
 }
 .item18 {
   grid-column: 4/5;
   grid-row: 6/7;
+  background-color: orangered;
 }
 
 .item2,
